Naftah - formatting